﻿****
News
****

- NEW: Report error when assigning a value to const, type, or in register
- NEW: Report error on duplicit declaration
- NEW: Call procedures and macros with scoped name (pmg.init)


==========
3-Jan-2011
==========

- NEW: Scope type
- NEW: Array of array (massive rewriting of rules matching)
- NEW: Slice addresses
- Atari: PMG support, modified Stars.atl to use new PMG, new PMG.atl example

==========
4-Dec-2010
==========

- NEW: Support for bool in conditions (built in bool type, custom definable bool types)

==========
3-Dec-2010
==========

- NEW: -P option may be used to define target platform 
- NEW: Compiler command is configured in processor file using rule
- NEW: atari.asm moved to m6502.asm (it will be shared by multiple platforms)
- NEW: Preliminary support for Oric Atmos platform
- OPT: when comparing variable that has only two possible value and one of them is 0, always compare to zero

==========
30-Nov-2010
==========

- NEW: bitand, bitor, bitxor, bitnot operators
- NEW: Signed integers assignment, add, sub, print
- NEW: Initializing array or slice of array with constant
- NEW: Assigning array to position at array (p(3) = x)
- NEW: print & format is now implemented as macro, not instruction
- OPT: Check phase (optimize values before translation)
- OPT: Reuse variables in independent functions 
- OPT: Variable merge (let a,5  let x,a  dead a => let x,5)
- OPT: Replace printing of constant values by printing of strings
- OPT: Skip jumps ( bne _l1  jmp _l2  _l2@ => beq _l2)
- OPT: Jump foldng (goto L1  L1@ goto L2@ => goto L2)
- OPT: Dead code elimination
 
==========
3-Oct-2010
==========

- OPT: Value optimization can elimitate some variable stores replacing them by more complex addressing modes 
- NEW: Support NOT
- NEW: RETURN allows returning from procedure including return values specifications
- Atari: all keyboard scan codes
- FIX: AND,OR in UNTIL
- FIX: Error when printing apostrophe